--- a/result/package.json
+++ b/result/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^3.1.0",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "method-override": "^3.0.0",
     "pg": "^8.8.0",
